# aurora-dsql-orms

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  buildspec.yml  pom.xml  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/actions/report-canary-failure/: action.yml
.github/workflows/: bandit-scan.yml  ci-gate.yml  cicd.yml  compat-canary.yml  dependabot-automerge.yml  deps-review.yml  dotnet-ef-core-ci.yml  dotnet-ef-core-release.yml  dsql-cluster-create.yml  dsql-cluster-delete.yml  integration-tests.yml  issue-regression-labeler.yml  java-flyway-ci.yml  java-flyway-release.yml  java-hibernate-ci.yml  java-hibernate-release.yml  node-prisma-ci.yml  node-prisma-release.yml  pre-commit.yml  publish.yml  python-django-ci.yml  python-django-release.yml  python-sqlalchemy-ci.yml  python-sqlalchemy-release.yml  python-tortoise-ci.yml  python-tortoise-release.yml  release.yml  stale-issues.yml  typescript-prisma-ci.yml  typescript-prisma-release.yml  update-changelog.yml
aurora_dsql_django/: __init__.py  base.py  features.py  operations.py  schema.py
aurora_dsql_django/tests/: test_settings.py  utils.py
aurora_dsql_django/tests/integration/: test_dsql.py
aurora_dsql_django/tests/unit/: test_base.py  test_creation.py  test_features.py  test_operations.py  test_schema.py  test_wrapper.py
com.aws.aurora.dsql/: dbeaver.target  plugin.xml  pom.xml
com.aws.aurora.dsql.feature/: feature.xml  pom.xml
com.aws.aurora.dsql.ui/: plugin.xml  pom.xml
com.aws.aurora.dsql.ui/OSGI-INF/l10n/: bundle.properties
com.aws.aurora.dsql.updatesite/: category.xml  pom.xml  site.xml
docs/plans/: 2025-01-26-monorepo-setup-design.md
dotnet/ef-core/: .gitignore  CHANGELOG.md  README.md
java/dbeaver/: pom.xml  update-version.sh
java/dbeaver/software.aws.aurora.dsql.dbeaver.community-plugin/: pom.xml
java/dbeaver/software.aws.aurora.dsql.dbeaver.feature/: pom.xml
java/dbeaver/software.aws.aurora.dsql.dbeaver.ui/: plugin.xml  pom.xml
java/dbeaver/software.aws.aurora.dsql.dbeaver.updatesite/: category.xml  pom.xml  site.xml
java/dbeaver/update-site/: artifacts.xml.xz  p2.index
java/flyway/: build.gradle
java/hibernate/: .gitignore  CHANGELOG.md  README.md  THIRD-PARTY
java/hibernate/dialect/: README.md  build.gradle  gradlew  settings.gradle
node/prisma/: CHANGELOG.md  README.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json
node/prisma/prisma/: veterinary-schema.prisma
node/prisma/src/cli/: index.ts  (+3 more)
node/prisma/test/: cli-integration.test.ts  transform.test.ts  validate.test.ts  workflow.test.ts
python/django/: .gitignore  CHANGELOG.md  pyproject.toml  setup.py
python/django/aurora_dsql_django/: .coverage  __init__.py  base.py  features.py  fields.py  operations.py  schema.py
python/django/reference/: ADAPTER_BEHAVIOR.md  KNOWN_ISSUES.md
python/sqlalchemy/: CHANGELOG.md  README.md  pyproject.toml
python/sqlalchemy/aurora_dsql_sqlalchemy/: base.py
python/sqlalchemy/examples/pet-clinic-app/: README.md  pyproject.toml
python/sqlalchemy/test/: test_compiler.py  test_sequence.py  test_serial_primary_key.py
python/tortoise-orm/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python/tortoise-orm/aurora_dsql_tortoise/: __init__.py
software.aws.aurora.dsql.dbeaver.feature/: feature.xml
software.aws.aurora.dsql.dbeaver.plugin/: dbeaver.target  plugin.xml  pom.xml
typescript/prisma/: CHANGELOG.md  README.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json
update-site/: content.xml.xz
(+241 files in other folders)
